# notes_engine

./: Cargo.toml  LICENSE  README.md  config.toml  logins.csv
notes/: index.md  secret.md
src/: access.rs  admin.rs  config.rs  logins.rs  main.rs  sessions.rs  templates.rs  user.rs
src/templates/: admin.hbs  base.hbs  code.hbs  dir.hbs  markdown.hbs
